force-app/main/default/objects/AccountLinkCreated__e/AccountLinkCreated__e.object-meta.xml
<CustomObject>
    <description>Published after an Account Link is created to match an Account</description>
    <label>AccountLinkCreated</label>
    <pluralLabel>AccountLinkCreated</pluralLabel>
</CustomObject>