force-app/main/default/objects/AccountLinkCreated__e/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Color of Account Link</description>
    <label>Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>