force-app/main/default/objects/AccountLinkCreated__e/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>The external ID of Account Link</description>
    <label>External Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>