force-app/main/default/objects/AccountLinkCreated__e/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Record Id of newly created AccountLink record</description>
    <label>Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>